@@ -1,3 +1,9 @@
+2009-09-10  Bartosz Kosiorek  <gang65@poczta.onet.pl>
+
+	Fix bug with DFP Power Off (ticket #317)
+
+	* src/via_mode.c: (ViaDFPPower):
+
 2009-08-20  Bartosz Kosiorek  <gang65@poczta.onet.pl>
 
 	Fix bug with wrong panel size value (http://www.openchrome.org/trac/ticket/301)
